# duckdb_tutorial

./: README.md  aggregated_sales.parquet  notebook.html  notebook.py  pyproject.toml
